Update SheetAPiˆ